--- a/tranga-website/src/Components/Mangas/MangaList.css
+++ b/tranga-website/src/Components/Mangas/MangaList.css
@@ -1,3 +1,3 @@
 .manga-list {
-    margin: 15px;
+    padding-top: 12px;
 }
